set up the different sections

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 <script src="js/script.js"></script>
 </head>
 <body>
-
+<div class="jumbotron">
+  <h2 class="title">Ping-Pong</h2>
+</div>
+<div class="bodyBg">
+  <div class="row">
+    <div class="col-md-2 side"></div>
+    <div class="col-md-10 main"></div>
+  </div>
+</div>
 </body>
 </html>
