Add content to sidebar

--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
 </div>
 <div class="bodyBg">
   <div class="row">
-    <div class="col-md-2 side"></div>
+    <div class="col-md-2 side">
+      <h3>About Ping Pong</h3>
+      <h4>Created by:</h4>
+      <p>Victoria Mutai</p>
+      <h4>Github Username/URL:</h4>
+      <p><a href="https://github.com/VickyMutai">VickyMutai</a></p>
+      <h4>Level 2 Text for: </h4>
+      <p>Java</p>
+    </div>
     <div class="col-md-10 main"></div>
   </div>
 </div>
