style the sidebar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="bodyBg">
   <div class="row">
     <div class="col-md-2 side">
-      <h3>About Ping Pong</h3>
+      <strong><h2>About Ping Pong</h2></strong>
       <h4>Created by:</h4>
       <p>Victoria Mutai</p>
       <h4>Github Username/URL:</h4>
