Divide into columns

--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 <div class="jumbotron">
   <h2 class="title">Ping-Pong</h2>
 </div>
-<div class="bodyBg">
-  <div class="row">
-    <div class="col-md-2 side">
+<div class="row bodyBg">
+    <div class="col-md-3 side">
       <strong><h2>About Ping Pong</h2></strong>
       <h4>Created by:</h4>
       <p>Victoria Mutai</p>
@@ -26,8 +25,16 @@
       <h4>Level 2 Text for: </h4>
       <p>Java</p>
     </div>
-    <div class="col-md-10 main"></div>
+    <div class="col-md-9 main">
+      <h4>Let's play!</h4>
+      <h5>Rules</h5>
+      <p>Ping Pong will count your number from 1 with the following exceptions: </p>
+      <ol>
+        <li>Numbers divisible by 3 become "ping".</li>
+        <li>Numbers divisible by 5 become "pong".</li>
+        <li>Numbers divisible by 3 and 5 become "pingpong"</li>
+      </ol>
+    </div>
   </div>
-</div>
 </body>
 </html>
