--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
         <li>Numbers divisible by 5 become "pong".</li>
         <li>Numbers divisible by 3 and 5 become "pingpong"</li>
       </ol>
+      <form id="ping">
+        <label id="inquire">Enter the number here:</label>
+        <input type="text" id="number">
+        <button class="btn" type="submit">Ping Pong!</button>
+      </form>
     </div>
   </div>
 </body>
