--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <input type="text" id="number">
         <button class="btn" type="submit">Ping Pong!</button>
       </form>
+      <div id="result"></div>
     </div>
   </div>
 </body>
