setting up user interface logic

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h4>Github Username/URL:</h4>
       <p><a href="https://github.com/VickyMutai">VickyMutai</a></p>
       <h4>Level 2 Text for: </h4>
-      <p>Java</p>
+      <p>JavaScript</p>
     </div>
     <div class="col-md-9 main">
       <h4>Let's play!</h4>
