--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
         <input type="text" id="number">
         <button class="btn" type="submit">Ping Pong!</button>
       </form>
-      <div id="result"></div>
+      <div id="result">
+        <ul></ul>
+      </div>
     </div>
   </div>
 </body>
