add for each on user interface logic

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <button class="btn" type="submit">Ping Pong!</button>
       </form>
       <div id="result">
-        <ul></ul>
+        <ul id="results"></ul>
       </div>
     </div>
   </div>
