Add content to README file

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <label id="inquire">Enter the number here:</label>
         <input type="text" id="number">
         <button class="btn" type="submit">Ping Pong!</button>
+          <button class="btn" id="reset" type="reset">Reset</div>
       </form>
       <div id="result">
         <ul id="results"></ul>
